# rocket_backend

./: Cargo.toml  README.md  Rocket.toml
src/: auth.rs  getters.rs  main.rs  setters.rs  structs.rs  wsserver.rs
